crates/roomrs/tests/ui/fail/relation_conflicting_attrs.stderr
error: 한 필드에 #[embedded]와 #[relation]을 함께 사용할 수 없습니다
  --> tests/ui/fail/relation_conflicting_attrs.rs:14:5
   |
14 |     parent: Option<Parent>,
   |     ^^^^^^
